[package]
name = "martim"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.4.4"
spin = "0.9.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]