[package]
name = "martim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.4.4"
spin = "0.9.1"
x86_64 = "0.14.3"
uart_16550 = "0.2.15"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.0"

[dependencies.futures-util]
version = "0.3.15"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.2"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # 5 minutes
